# Project2

./: .gitignore  README.md  run.sh
backend/: .a.out.dSYM.icloud  .output.txt.icloud  CMakeLists.txt  a 2.out  a.out  addon.cpp  binding.gyp  data.txt  data1.txt  data2.txt  data_index.txt  data_processor.cpp  data_processor.h  index.js  inverted_index.cpp  inverted_index.h  main.cpp  node.h  output.txt  package-lock.json  package.json  porter_stemming.cpp  porter_stemming.h  server.cpp  structs.h  test.cpp  test.h
backend/archive/: .movie_review.csv.icloud
backend/docs/: cv459_20319.txt
backend/index/: 0.json  144.json  288.json  432.json  576.json  720.json  864.json  index.json  index.txt  test.txt  words.json
backend/input/: 0.json  144.json  288.json  4.json  432.json  576.json  720.json  8.json  864.json
backend/small/: cv000_29590.txt
front/: package-lock.json  package.json
front/src/: App.vue  main.js  router.js
front/src/components/: Home.vue  Result.vue  SearchBar.vue
front/src/services/: collection.js  session.js
front/src/store/: store.js
front/src/store/modules/: collection.js  types.js
